[metadata]
name = dyncommands
version = attr: dyncommands._version.__version__
author = Cubicpath
author_email = Cubicpath@pm.me
description = Dynamic command execution, parsing, and storage.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Cubicpath/dyncommands
license = MIT
license_file = LICENSE
platforms = UNKNOWN
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
python_requires = >=3.9
install_requires =
    jsonschema>=4.3.2
    requests>=2.26.0
    RestrictedPython>=5.2
package_dir =
    = src
packages =
    dyncommands
zip_safe = False

[options.package_data]
* =
    py.typed
dyncommands =
    schemas
    schemas/*

[options.extras_require]
testing =
    pylint>=2.12.2
    pytest>=6.2.5
    pytest-cov>=3.0.0
    tox>=3.24.4
